use roomCode instead of roomId through full stack
